# AEAC2027

./: .gitignore  ONBOARDING.md  README.md  START_HERE.md  WELCOME.md  pyproject.toml  requirements.txt  start.ps1  
.github/: dependabot.yml
config/: conops.yaml  defaults.yaml  rpas.yaml  rpas_calibration.yaml.example  vion.yaml  vion_calibration.yaml  vivi.yaml  vulcan2.yaml
docs/: architecture.md  branches.md  conops.md  drones.md  github-issues-backlog.md  interfaces.md
missions/: task1_vivi_survey.py  task2_vion_auto_extinguish.py  task2_vion_manual_photo.py
models/: README.md
tests/: test_ceiling_constraint.py  test_config_smoke.py  test_corner_aim.py  test_corner_recon.py  test_corner_target.py  test_cv_api.py  test_cv_detector_parity.py  test_edge_proximity.py  test_fc_safety.py  test_field_orbit.py  test_flight_profiles.py  test_gcs_hud.py  test_guided_forward.py  test_mavlink_connect.py  test_mavlink_land.py  test_mavlink_statustext.py  test_metric_geometry_3d.py  test_mission_hardware_field.py  test_motion_planner.py  test_ned_kinematics.py  test_pilot_override.py  test_profile_connection.py  test_public_apis.py  test_rpas_config.py  test_sitl_dashboard.py  test_sitl_mission_loader.py  test_sitl_motion.py  test_sitl_pattern.py  test_sitl_physics.py  test_sitl_physics_pose.py  test_sitl_preflight.py  test_sitl_search.py  test_spray_aim.py  test_subframe_grid.py  test_subframe_yolo.py  test_subsystem_boundaries.py  test_synthetic_camera.py  test_synthetic_multi_camera.py  test_tools_layout.py  test_upload_drive.py  (+2 more)
tools/: README.md  bringup_gcs.ps1  calibrate_depth_rgb.py  check_mavlink_gcs.py  cli_diag.py  copy_calibration_from_pi.ps1  create_github_issues.ps1  (+32 more)
(+205 files in other folders)
