[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aeac2027"
version = "0.1.0"
description = "Valiant Aerotech AEAC 2027 mission software for Vion, Vivi, and Vulcan 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pymavlink>=2.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
cv = ["onnxruntime>=1.16", "ultralytics>=8.0"]
gcs = ["mss>=9.0", "pygetwindow>=0.0.9"]
upload = ["google-api-python-client>=2.0", "google-auth>=2.0"]
dev = ["pytest>=7.0", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "sitl: requires ArduPilot SITL on tcp:127.0.0.1:5760",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Fatal errors only in CI; expand select over time (F401, F841, etc.)
select = ["E9", "F63", "F7", "F82"]
